# usd-bind

./: .gitignore  README.md  bind.sh  doxygen_to_markdown.sh
bind/: std_list.cpp  std_map.cpp  std_string.cpp  std_type_info.cpp  std_vector.cpp
bind/pxr/base/gf/: gf_ilmbase_half.cpp  gf_matrix.cpp  gf_quat.cpp  gf_vec.cpp
bind/pxr/base/tf/: c-type.cpp  ref_ptr.cpp  tf_diagnostic_mgr.cpp  tf_error.cpp  tf_ref_ptr.cpp  tf_token.cpp  tf_type.cpp  tf_weak_ptr.cpp  weak_ptr.cpp
bind/pxr/base/vt/: c-array.cpp  c-value.cpp  vt_array.cpp  vt_dictionary.cpp  vt_value.cpp
bind/pxr/usd/: checklist.md
bind/pxr/usd/ar/: ar_asset.cpp  ar_asset_info.cpp  ar_default_resolver.cpp  ar_default_resolver_context.cpp  ar_filesystem_asset.cpp  ar_filesystem_writable_asset.cpp  ar_notice.cpp  ar_package_resolver.cpp  ar_resolved_path.cpp  ar_resolver.cpp  ar_resolver_context.cpp  ar_resolver_context_binder.cpp  ar_resolver_scoped_cache.cpp  ar_thread_local_scoped_cache.cpp  ar_timestamp.cpp  ar_writable_asset.cpp  assetInfo.cpp  checklist.md
bind/pxr/usd/kind/: kind_registry.cpp
bind/pxr/usd/ndr/: make_binds.py  ndr_discovery_plugin.cpp  ndr_node.cpp  ndr_node_discovery_result.cpp  ndr_parser_plugin.cpp  ndr_property.cpp  ndr_registry.cpp
bind/pxr/usd/pcp/: pcp_arc.cpp  pcp_cache.cpp  pcp_changes.cpp  pcp_compose_site.cpp  pcp_dependency.cpp  pcp_dynamic_file_format_context.cpp  pcp_dynamic_file_format_dependency_data.cpp  pcp_dynamic_file_format_interface.cpp  pcp_errors.cpp  pcp_instance_key.cpp  pcp_iterator.cpp  pcp_layer_prefetch_request.cpp  pcp_layer_stack.cpp  pcp_layer_stack_identifier.cpp  pcp_map_expression.cpp  pcp_map_function.cpp  pcp_namespace_edits.cpp  pcp_node.cpp  pcp_path_translation.cpp  pcp_prim_index.cpp  pcp_property_index.cpp  pcp_site.cpp  pcp_strength_ordering.cpp  pcp_target_index.cpp  pcp_types.cpp
bind/pxr/usd/sdf/: c-path.cpp  declare_handles.cpp  sdf_abstract_data.cpp  sdf_allowed.cpp  sdf_asset_path.cpp  sdf_attribute_spec.cpp  sdf_change_block.cpp  sdf_change_list.cpp  sdf_children.cpp  sdf_children_policies.cpp  sdf_children_utils.cpp  sdf_children_view.cpp  sdf_copy_utils.cpp  sdf_data.cpp  sdf_declare_handles.cpp  sdf_file_format.cpp  sdf_identity.cpp  sdf_layer.cpp  sdf_layer_hints.cpp  sdf_layer_offset.cpp  sdf_layer_state_delegate.cpp  sdf_layer_tree.cpp  sdf_layer_utils.cpp  sdf_list_editor.cpp  sdf_list_editor_proxy.cpp  sdf_list_op.cpp  sdf_map_editor.cpp  sdf_namespace_edit.cpp  sdf_notice.cpp  sdf_path.cpp  sdf_path_node.cpp  sdf_path_table.cpp  sdf_payload.cpp  sdf_pool.cpp  sdf_prim_spec.cpp  sdf_property_spec.cpp  sdf_proxy_policies.cpp  sdf_proxy_types.cpp  sdf_pseudo_root_spec.cpp  sdf_reference.cpp  (+15 more)
bind/pxr/usd/usd/: c-attribute.cpp  c-common.cpp  c-prim.cpp  c-stage.cpp  prim_range.cpp  usd_attribute.cpp  usd_prim.cpp  usd_prim_flags.cpp  usd_prim_range.cpp  usd_property.cpp  usd_references.cpp  usd_stage.cpp  usd_time_code.cpp
bind/pxr/usd/usd_geom/: c-sphere.cpp  c-xform.cpp  usd_geom_mesh.cpp  usd_geom_metrics.cpp  usd_geom_sphere.cpp  usd_geom_xform.cpp
scripts/: Cargo.toml  build.rs
usd-c/: CMakeLists.txt
usd-c/abigen/: CMakeLists.txt  abigen.cpp  std_list.cpp  std_map.cpp  std_string.cpp  std_type_info.cpp  std_type_info.hpp  std_vector.cpp
usd-c/abigen/pxr/base/gf/: gf_ilmbase_half.cpp  (+6 more)
usd-c/include/: usd-api-export.h
usd-c/include.in/: std_list.h  std_map.h  std_type_info.h  std_vector.h
usd-c/private/: std_list_private.h  std_type_info_private.h
usd-c/src/: std_list.cpp  std_type_info.cpp
usd-rs/: Cargo.toml  HelloWorld.usda
usd-rs/crates/usd/: Cargo.toml
usd-rs/crates/usd-base-tf/: Cargo.toml
usd-rs/crates/usd-base-tf/src/: lib.rs  token.rs
usd-rs/crates/usd-cppstd/: Cargo.toml
usd-rs/crates/usd-cppstd/src/: lib.rs  map_string_string.rs
usd-rs/crates/usd-geom/: Cargo.toml
usd-rs/crates/usd-geom/src/: lib.rs  mesh.rs  metrics.rs  sphere.rs  xform.rs
usd-rs/crates/usd-sdf/: Cargo.toml
usd-rs/crates/usd-sdf/src/: asset_path.rs  layer.rs  layer_offset.rs  lib.rs  path.rs  reference.rs  refptr.rs  time_code.rs  value_type_name.rs
usd-rs/crates/usd-tf/: Cargo.toml
usd-rs/crates/usd-tf/src/: diagnostic_mgr.rs  error.rs  lib.rs  token.rs
usd-rs/crates/usd-vt/: Cargo.toml
usd-rs/crates/usd-vt/src/: array.rs  array_gfvec.rs  array_macro.rs  array_tftoken.rs  cppstring_array.rs  dictionary.rs  lib.rs  scalar_array.rs  sdfassetpath_array.rs  sdftimecode_array.rs  tftoken_array.rs  trait_array.rs  value.rs
usd-rs/crates/usd-vt/src/test/: mod.rs  sdfassetpath.rs  sdfassetpath_array.rs  value.rs
usd-rs/crates/usd/src/: attribute.rs  common.rs  error.rs  lib.rs  prim.rs  prim_range.rs  property.rs  references.rs  refptr.rs  stage.rs  time_code.rs
usd-rs/data/: box_vertex_colors.usda  twocubes.usda
usd-rs/examples/traverse_attributes/: Cargo.toml
usd-rs/examples/traverse_attributes/src/: main.rs
usd-rs/examples/tutorial01/: Cargo.toml
usd-rs/examples/tutorial01/src/: main.rs
(+114 files in other folders)
