[package]
name = "usd-geom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usd-sys = { path = "../../../build/usd-sys"}
usd = { path = "../usd"}
usd-sdf = { path = "../usd-sdf"}
usd-tf = { path = "../usd-tf"}
usd-cppstd = { path = "../usd-cppstd"}

imath-traits = "^0.4"

cgmath = {version = "^0.18", optional = true}
glam = {version = "^0.18", optional = true}
nalgebra = {version = "^0.27", optional = true}
nalgebra-glm = {version = "^0.12", optional = true}

[features]
imath_cgmath = ["imath-traits/cgmath", "cgmath"]
imath_glam = ["imath-traits/glam", "glam"]
imath_nalgebra = ["imath-traits/nalgebra", "nalgebra"]
imath_nalgebra-glm = ["imath-traits/nalgebra-glm", "nalgebra-glm"]
