[package]
name = "usd-sdf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usd-sys = {path="../../../build/usd-sys"}
usd-cppstd = {path = "../usd-cppstd"}
usd-tf = {path = "../usd-tf"}
cppmm-refptr = "^0.1"
