[package]
name = "usd-vt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usd-tf = {path = "../usd-tf"}
usd-sdf = {path = "../usd-sdf"}
usd-cppstd = {path = "../usd-cppstd"}
usd-sys = {path = "../../../build/usd-sys"}
imath-traits = "0.4.0"
