[package]
name = "usd-vt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usd-tf = {path = "../usd-tf"}
usd-sdf = {path = "../usd-sdf"}
usd-cppstd = {path = "../usd-cppstd"}
usd-sys = {path = "../../../build/usd-sys"}
imath-traits = "0.4.0"
cfg-if = "^1.0"

cgmath = {version = "^0.18", optional = true}
glam = {version = "^0.17", optional = true}
nalgebra = {version = "^0.27", optional = true}
nalgebra-glm = {version = "^0.12", optional = true}

[features]
imath_cgmath = ["imath-traits/cgmath", "cgmath"]
imath_glam = ["imath-traits/glam", "glam"]
imath_nalgebra = ["imath-traits/nalgebra", "nalgebra"]
imath_nalgebra-glm = ["imath-traits/nalgebra-glm", "nalgebra-glm"]
