[package]
name = "usd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usd-sys = {path="../../../build/usd-sys"}
usd-cppstd = {path = "../usd-cppstd"}
usd-base-tf = {path = "../usd-base-tf"}
usd-sdf = {path = "../usd-sdf"}
