[package]
name = "traverse_attributes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usd = {path = "../../crates/usd"}
usd-sdf = {path = "../../crates/usd-sdf"}
usd-geom = {path = "../../crates/usd-geom"}
usd-tf = {path = "../../crates/usd-tf"}
